--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,107 +10,6 @@
         android:id="@+id/home_toolbar"
         layout="@layout/layout_home_toolbar" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <com.company.farmerpocket.component.banner.ConvenientBanner
-                android:id="@+id/convenientBanner"
-                android:layout_width="match_parent"
-                android:layout_height="160dp" />
-
-            <LinearLayout
-                android:id="@+id/home_content_layout"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dimen_10"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/icon_home_type_chaye"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:src="@mipmap/icon_home_type_chaye" />
-
-                    <ImageView
-                        android:id="@+id/icon_home_type_shuiguo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:src="@mipmap/icon_home_type_shuiguo" />
-
-                    <ImageView
-                        android:id="@+id/icon_home_type_nongchan"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:src="@mipmap/icon_home_type_nongchan" />
-
-                    <ImageView
-                        android:id="@+id/icon_home_type_shuichanhaixian"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:src="@mipmap/icon_home_type_shuichanhaixian" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dimen_20"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/icon_home_type_jinkoushuiguo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:src="@mipmap/icon_home_type_jinkoushuiguo" />
-
-                    <ImageView
-                        android:id="@+id/icon_home_type_jinkounongchan"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:src="@mipmap/icon_home_type_jinkounongchan" />
-
-                    <ImageView
-                        android:id="@+id/icon_home_type_jinkoushuichan"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:src="@mipmap/icon_home_type_jinkoushuichan" />
-
-                    <ImageView
-                        android:id="@+id/icon_home_type_huafei"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:src="@mipmap/icon_home_type_huafei" />
-                </LinearLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginTop="@dimen/dimen_20"
-                    android:background="@color/common_view_grey" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </ScrollView>
+    <include layout="@layout/activity_home_refresh"/>
 
 </LinearLayout>
