--- a/app/src/main/res/layout/activity_home_content.xml
+++ b/app/src/main/res/layout/activity_home_content.xml
@@ -18,95 +18,96 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_10"
+            android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/icon_home_type_chaye"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_10"
-                android:orientation="horizontal">
+                android:layout_weight="1"
+                android:onClick="homeTypeClick"
+                android:src="@mipmap/icon_home_type_chaye" />
 
-                <ImageView
-                    android:id="@+id/icon_home_type_chaye"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="homeTypeClick"
-                    android:src="@mipmap/icon_home_type_chaye" />
-
-                <ImageView
-                    android:id="@+id/icon_home_type_shuiguo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="homeTypeClick"
-                    android:src="@mipmap/icon_home_type_shuiguo" />
-
-                <ImageView
-                    android:id="@+id/icon_home_type_nongchan"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="homeTypeClick"
-                    android:src="@mipmap/icon_home_type_nongchan" />
-
-                <ImageView
-                    android:id="@+id/icon_home_type_shuichanhaixian"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="homeTypeClick"
-                    android:src="@mipmap/icon_home_type_shuichanhaixian" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/icon_home_type_shuiguo"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_20"
-                android:orientation="horizontal">
+                android:layout_weight="1"
+                android:onClick="homeTypeClick"
+                android:src="@mipmap/icon_home_type_shuiguo" />
 
-                <ImageView
-                    android:id="@+id/icon_home_type_jinkoushuiguo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="homeTypeClick"
-                    android:src="@mipmap/icon_home_type_jinkoushuiguo" />
+            <ImageView
+                android:id="@+id/icon_home_type_nongchan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="homeTypeClick"
+                android:src="@mipmap/icon_home_type_nongchan" />
 
-                <ImageView
-                    android:id="@+id/icon_home_type_jinkounongchan"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="homeTypeClick"
-                    android:src="@mipmap/icon_home_type_jinkounongchan" />
-
-                <ImageView
-                    android:id="@+id/icon_home_type_jinkoushuichan"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="homeTypeClick"
-                    android:src="@mipmap/icon_home_type_jinkoushuichan" />
-
-                <ImageView
-                    android:id="@+id/icon_home_type_huafei"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="homeTypeClick"
-                    android:src="@mipmap/icon_home_type_huafei" />
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="@dimen/dimen_20"
-                android:background="@color/common_view_grey" />
-
+            <ImageView
+                android:id="@+id/icon_home_type_shuichanhaixian"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="homeTypeClick"
+                android:src="@mipmap/icon_home_type_shuichanhaixian" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_20"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/icon_home_type_jinkoushuiguo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="homeTypeClick"
+                android:src="@mipmap/icon_home_type_jinkoushuiguo" />
+
+            <ImageView
+                android:id="@+id/icon_home_type_jinkounongchan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="homeTypeClick"
+                android:src="@mipmap/icon_home_type_jinkounongchan" />
+
+            <ImageView
+                android:id="@+id/icon_home_type_jinkoushuichan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="homeTypeClick"
+                android:src="@mipmap/icon_home_type_jinkoushuichan" />
+
+            <ImageView
+                android:id="@+id/icon_home_type_huafei"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="homeTypeClick"
+                android:src="@mipmap/icon_home_type_huafei" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="@dimen/dimen_20"
+            android:background="@color/common_view_grey" />
+
+        <com.company.farmerpocket.view.NoScrollGridView
+            android:id="@+id/grid_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:columnWidth="160dp"
+            android:gravity="center"
+            android:numColumns="2"
+            android:stretchMode="columnWidth" />
 
     </LinearLayout>
 
