--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="black_alpha">#333333</color>
     <color name="white">#FFFFFF</color>
     <color name="transparent">#00000000</color>
+    <color name="red">#ff0000</color>
 
     <color name="color_000000">#000000</color>
     <color name="color_333333">#333333</color>
