--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -8,4 +8,23 @@
 
     <include layout="@layout/layout_group_toolbar"/>
 
+    <com.company.farmerpocket.component.refreshload.PullToRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/group_refresh_scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <include layout="@layout/pull_to_refresh_head" />
+
+        <!-- 支持所有实现Pullable接口的View -->
+        <com.company.farmerpocket.component.refreshload.pullableview.PullableRecyclerView
+            android:id="@+id/refresh_group_recycler_content_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white" />
+
+        <include layout="@layout/pull_to_refresh_load_more" />
+
+    </com.company.farmerpocket.component.refreshload.PullToRefreshLayout>
+
+
 </LinearLayout>
